# latch

./: .gitignore  CMakeLists.txt  Gate.hpp  GateTemplate.hpp  IGate.hpp  IPin.hpp  IScheduler.hpp  LICENSE  NORGate.hpp  README.md  TruthTable.hpp  ZeroDelayPin.hpp  main.cpp
.github/workflows/: cmake.yml
src/: CMakeLists.txt
src/components/: ALU.cpp  ALU.hpp  Bus.cpp  Bus.hpp  CMakeLists.txt  Clock.cpp  Clock.hpp  ComponentBase.hpp  ComponentDescription.hpp  ComponentFactory.cpp  ComponentFactory.hpp  ForwardPin.hpp  GateComponents.cpp  GateComponents.hpp  IComponent.hpp  IEventComponent.hpp  ProgramCounter.cpp  ProgramCounter.hpp  Register.cpp  Register.hpp  Timer.cpp  Timer.hpp
src/event-components/: CMakeLists.txt  Timer.cpp  Timer.hpp
src/gate/: ANDGate.hpp  BusBuffer.hpp  CMakeLists.txt  DelayedPin.hpp  GateTemplate.hpp  IGate.hpp  IPin.hpp  InertialPin.hpp  NANDGate.hpp  NORGate.hpp  NOTGate.hpp  ORGate.hpp  TruthTable.hpp  XORGate.hpp  ZeroDelayPin.hpp
src/logger/: CMakeLists.txt  Logger.hpp
src/sched/: CMakeLists.txt  EventQueue.cpp  EventQueue.hpp  IScheduler.hpp  Scheduler.cpp  SimpleScheduler.cpp  SimpleScheduler.hpp
tests/: CMakeLists.txt
tests/clock/: CMakeLists.txt  main.cpp
tests/component-factory/: CMakeLists.txt  main.cpp
tests/components/: ALUTests.cpp  ALUTests.hpp  BinaryAdderTests.cpp  BusTests.cpp  CMakeLists.txt  ComponentBaseTests.cpp  ProgramCounterTests.cpp  RegisterTests.cpp
tests/components/ANDGate/: ANDGate.cpp
tests/components/NANDGate/: NANDGate.cpp
tests/components/NORGate/: NORGate.cpp
tests/components/NOTGate/: NOTGate.cpp
tests/components/ORGate/: ORGate.cpp
tests/d-flip-flop/: CMakeLists.txt  main.cpp
tests/d-latch/: CMakeLists.txt  main.cpp
tests/edge-detector/: CMakeLists.txt  main.cpp
tests/gate/: CMakeLists.txt
tests/gate/ANDGate/: ANDGate.cpp
tests/gate/BusBuffer/: BusBuffer.cpp
tests/gate/NANDGate/: NANDGate.cpp
tests/gate/NORGate/: NORGate.cpp
tests/gate/NOTGate/: NOTGate.cpp
tests/gate/ORGate/: ORGate.cpp
tests/gate/XORGate/: XORGate.cpp
tests/one-bit/: CMakeLists.txt  main.cpp
tests/sr-latch/: CMakeLists.txt  main.cpp
tests/timer/: CMakeLists.txt  main.cpp
tools/: CMakeLists.txt
tools/component_descriptors/: CMakeLists.txt  component_descriptors.cpp
tools/scripts/: update-license-date.sh
tools/viewer/: CMakeLists.txt  index.html  package-lock.json  package.json
tools/viewer/electron/: main.js
tools/viewer/frontend/: CMakeLists.txt  index.html  jest.config.js  package-lock.json  package.json  tsconfig.json  vite.config.ts
tools/viewer/frontend/.vim/: coc-settings.json
tools/viewer/frontend/src/: App.vue
tools/viewer/frontend/src/assets/: base.css  descriptors.json
tools/viewer/frontend/src/components/: GraphView.vue  GraphViewV2.vue  mxgraph.ts
tools/viewer/frontend/src/descriptor/: components.ts  loader.ts
tools/viewer/frontend/tests/: components.test.ts  foo.test.ts  loader.test.ts
